css fix for sources window, changed action buttons to our traditional teal for better contrast

--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -8,15 +8,15 @@ button,
 }
 
 .button--action {
-  background-color: @teal-bright;
+  background-color: @teal;
   color: @white;
 
   &:hover {
-    background-color: lighten(@teal-bright, 4%);
+    background-color: lighten(@teal, 4%);
   }
 
   &:focus {
-    background-color: @teal-bright;
+    background-color: @teal;
   }
 }
 
